--- a/kafak-master/kafka-01/pom.xml
+++ b/kafak-master/kafka-01/pom.xml
@@ -8,8 +8,13 @@
   <artifactId>kafka-01</artifactId>
   <version>1.0.0</version>
   <name>kafka-01</name>
-  
-  	<dependencies>
+
+	<properties>
+		<maven.compiler.source>11</maven.compiler.source>
+		<maven.compiler.target>11</maven.compiler.target>
+	</properties>
+
+	<dependencies>
 		<dependency>
 		    <groupId>org.apache.kafka</groupId>
 		    <artifactId>kafka-clients</artifactId>
@@ -24,8 +29,20 @@
 		    <groupId>org.slf4j</groupId>
 		    <artifactId>slf4j-simple</artifactId>
 		    <version>1.7.36</version>
-		</dependency>		
-		
-		
+		</dependency>
 	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.1</version>
+				<configuration>
+					<release>11</release>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
 </project>
