--- a/kafak-master/pom.xml
+++ b/kafak-master/pom.xml
@@ -1,32 +1,89 @@
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.madlabs.kafka</groupId>
-  <artifactId>kafka-master</artifactId>
-  <version>1.0.0</version>
-  <packaging>pom</packaging>
-  <name>kafka-master</name>
-	 <properties>
-	    <maven.compiler.source>11</maven.compiler.source>
-	    <maven.compiler.target>11</maven.compiler.target>
-	</properties>
-
-	<build>
-	    <plugins>
-	        <plugin>
-	            <groupId>org.apache.maven.plugins</groupId>
-	            <artifactId>maven-compiler-plugin</artifactId>
-	            <version>3.8.1</version>
-	            <configuration>
-	                <release>11</release>
-	            </configuration>
-	        </plugin>
-	    </plugins>
-	</build>
+      
   
-	<modules>
-		<module>kafka-01</module>
-	</modules>
+  <modelVersion>4.0.0</modelVersion>
+      
+  
+  <groupId>com.madlabs.kafka</groupId>
+      
+  
+  <artifactId>kafka-master</artifactId>
+      
+  
+  <version>1.0.0</version>
+      
+  
+  <packaging>pom</packaging>
+      
+  
+  <name>kafka-master</name>
+    	 
+  
+  <properties>
+        	    
+    
+    <maven.compiler.source>11</maven.compiler.source>
+        	    
+    
+    <maven.compiler.target>11</maven.compiler.target>
+        	
+  
+  </properties>
+    	
+  
+  <build>
+        	    
+    
+    <plugins>
+            	        
+      
+      <plugin>
+                	            
+        
+        <groupId>org.apache.maven.plugins</groupId>
+                	            
+        
+        <artifactId>maven-compiler-plugin</artifactId>
+                	            
+        
+        <version>3.8.1</version>
+                	            
+        
+        <configuration>
+                    	                
+          
+          <release>11</release>
+                    	            
+        
+        </configuration>
+                	        
+      
+      </plugin>
+            	    
+    
+    </plugins>
+        	
+  
+  </build>
+      
 	
+  
+  <modules>
+        		
+    
+    <module>kafka-01</module>
+        	  
+    
+    <module>kafka-producer-wikimedia</module>
+          
+    
+    <module>kafka-consumer-opensearch</module>
+      
+  </modules>
+    	
 	
+
+
 
 </project>
